website-source/_shared/css/brand.css
/* ... */
header>.pg-img-container {
    position: relative;
    width: 100%;
    height: 100%;
    max-width: var(--pg-max-width-header);
    margin: 0 auto;
}

header picture {
    width: 100%;
    height: 100%;
    position: absolute;
    bottom: 0;
    left: 0;
}

header picture>img {

    object-fit: cover;
    /* height: calc(var(--pg-header-height) - (var(--pg-header-padding-bottom)*2)); */
    height: 100%;
    width: 100%;
}

nav {
    /* position: absolute;
    bottom: var(--space-3xs);
    left: var(--pg-border-width); */
    /* position: absolute;
    bottom: 0;
    left: 0; */
    margin: 0 auto;
    display: block;
    height: 100%;
    position: relative;
    /* padding: 0 !important; */
}


nav>ul {
    list-style: none;
    display: flex;
    gap: var(--space-2xs);
    padding: 0;
    margin: 0;
    position: absolute;
    bottom: 0;
    left: var(--space-xs);
}

nav>ul>li {
    padding: 0;
    margin: 0;
    /* line-height: 1; */
}

nav>ul>li>a,
nav>ul>li>a:visited {
    font-size: var(--font-size-1);
    background-color: whitesmoke;
    background-color: var(--pg-colour-dark);
    color: whitesmoke;
    margin: 0;
    padding: var(--space-2xs) var(--space-xs) var(--space-3xs) var(--space-xs);
    text-decoration: none;
    /* line-height: 1; */
}

nav>ul>li.is-active>a {}

.pg-logo {
    position: absolute;
    top: var(--space-2xs);
    left: 50%;
    transform: translateX(-50%);
    line-height: 0;
    color: var(--pg-colour-dark);
}

.pg-logo>svg {
    width: 100% !important;
    height: auto !important;
    max-width: var(--space-l);
}

/*
##          ###    ##    ##  #######  ##     ## ########
##         ## ##    ##  ##  ##     ## ##     ##    ##
##        ##   ##    ####   ##     ## ##     ##    ##
##       ##     ##    ##    ##     ## ##     ##    ##
##       #########    ##    ##     ## ##     ##    ##
##       ##     ##    ##    ##     ## ##     ##    ##
######## ##     ##    ##     #######   #######     ##
*/

.pg-full-height {
    display: grid;
    position: relative;
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 100%;
    min-height: 100vh;
    /* padding-block-start: var(--space-xs); */
}

.pg-column-main {
    max-width: var(--pg-max-width);
    margin: 0 auto;
    padding: 0 var(--space-xs);
    width: 100%;
}

/*
##       ####  ######  ########  ######
##        ##  ##    ##    ##    ##    ##
##        ##  ##          ##    ##
##        ##   ######     ##     ######
##        ##        ##    ##          ##
##        ##  ##    ##    ##    ##    ##
######## ####  ######     ##     ######
*/

.pg-list {
    list-style: none;
    padding-inline-start: 0;
}

.pg-list time {
    color: var(--pg-colour-mid);
    margin-inline-start: var(--space-2xs);
}

/*
##    ##  #######  ######## ########  ######
###   ## ##     ##    ##    ##       ##    ##
####  ## ##     ##    ##    ##       ##
## ## ## ##     ##    ##    ######    ######
##  #### ##     ##    ##    ##             ##
##   ### ##     ##    ##    ##       ##    ##
##    ##  #######     ##    ########  ######
*/

.pg-list-notes li::before {
    content: "";
    display: inline-block;
    width: 1em;
    height: 1em;
    background-image: url(/_shared/images/icons/icon-note.svg);
    background-repeat: no-repeat;
    vertical-align: text-top;
}

/*
########    ###     ######    ######
   ##      ## ##   ##    ##  ##    ##
   ##     ##   ##  ##        ##
   ##    ##     ## ##   ####  ######
   ##    ######### ##    ##        ##
   ##    ##     ## ##    ##  ##    ##
   ##    ##     ##  ######    ######
*/

.pg-tags-container,
.pg-tags-container ul {
    display: flex;
}

.pg-tags-container ul,
.pg-tags-container p {
    margin: 0;
}

.pg-tags-container ul {
    list-style: none;
    padding-inline-start: var(--space-2xs);
    gap: var(--space-2xs);
}

/*
########  #######   #######  ######## ######## ########
##       ##     ## ##     ##    ##    ##       ##     ##
##       ##     ## ##     ##    ##    ##       ##     ##
######   ##     ## ##     ##    ##    ######   ########
##       ##     ## ##     ##    ##    ##       ##   ##
##       ##     ## ##     ##    ##    ##       ##    ##
##        #######   #######     ##    ######## ##     ##
*/

footer {
    display: flex;
    justify-content: center;
    background-color: var(--pg-colour-dark);
    color: whitesmoke;
    padding: var(--space-xl);
    margin-block-start: var(--space-xl);
}

footer a,
footer a:visited {
    color: whitesmoke;
}

